Updated Swagger Python API
