# Backend/swagger_server/swagger/swagger.yaml
@@ -3,7 +3,7 @@ swagger: "2.0"
 info:
   description: "Main API used for the ECOMP Project. All agrigated endpoint data is\
     \ retrevied from this API."
-  version: "0.1.0"
+  version: "1.0.0"
   title: "Energy Consumption Optimization Mapagement Platform"
   termsOfService: "http://swagger.io/terms/"
   contact:
@@ -17,11 +17,8 @@ tags:
 - name: "geojson"
   description: "Map spesific information,imbedded within a geojson containing information\
     \ for each building"
-- name: "locationInformation"
-  description: "Location spesific information related to each building. Find out more\
-    \ about each building"
-- name: "campus"
-  description: "Campus information for main page"
+- name: "campus & building"
+  description: "Campus and building information for main page"
 schemes:
 - "https"
 - "http"
@@ -55,7 +52,7 @@ paths:
   /getAllCampus:
     get:
       tags:
-        - "campus"
+        - "campus & building"
       summary: "Return information on all campus"
       description: "Key information for each campus"
       operationId: "get_campus_information"
@@ -71,7 +68,48 @@ paths:
         404:
           description: "Pet not found"
       x-swagger-router-controller: "swagger_server.controllers.geojson_controller"
+  /buildingInformation/{buildingId}:
+    get:
+      tags:
+      - "campus & building"
+      summary: "Find building by id"
+      description: "Returns a single campus geojson"
+      operationId: "get_building_info_by_id"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "buildingId"
+        in: "path"
+        description: "ID of campus to return geojson for"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/buildingInformation"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+      x-swagger-router-controller: "swagger_server.controllers.geojson_controller"
+    
 definitions:
+  buildingInformation:
+    type: "object"
+    properties:
+      BuildingName:
+        type: "string"
+        example: "Chamber of mines"
+      numberOfStudentsAvg:
+        type: "number"
+        example: "1000"
+      numberOfSensors:
+        type: "number"
+        example: 42
+      # averageWeek:
+      #   type:
   Campus:
     type: "array"
     items:
@@ -92,9 +130,6 @@ definitions:
           type: "number"
         totalSensors:
           type: "number"
-    
-            
-          
   Feature:
     type: "object"
     properties:
